remove getLast incomp